[package]
name = "greenhouse-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
prometheus = { version = "0.13", features = ["default"] }