[package]
name = "greenhouse-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
prometheus = { version = "0.13", features = ["default"] }
# clap = {version = "4.1", features = ["derive"]}
include_dir = "0.7.3"
rppal = { version = "0.14", features = ["default", "hal", "hal-unproven"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_merge = "0.1.3"
log = "0.4"
env_logger = "0.10"
mime_guess = "2.0"

[dev-dependencies]
anyhow = "1"
